--- a/public/chat.html
+++ b/public/chat.html
@@ -29,15 +29,15 @@
       <div class="chat-messages">
         <div class="message">
           <p class="meta">Brad <span>9:12pm</span></p>
-          <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, repudiandae.
-          </p>
+          <!--<p class="text">
+            
+          </p>-->
         </div>
         <div class="message">
           <p class="meta">Mary <span>9:15pm</span></p>
-          <p class="text">
+          <!--<p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, repudiandae.
-          </p>
+          </p>-->
         </div>
       </div>
     </main>
